@@ -1,5 +1,9 @@
 2013-03-27  Junichi Satoh  <junichi@rworks.jp>
 
+	* include/help/ja/help_plugin_definition.php: Updated help.
+
+2013-03-27  Junichi Satoh  <junichi@rworks.jp>
+
 	* include/help/ja/help_conf_alert_template.php: Added a new help file.
 
 2013-03-26 Miguel de Dios <miguel.dedios@artica.es>
